--- a/client/styles/components/_navbar.scss
+++ b/client/styles/components/_navbar.scss
@@ -1,12 +1,12 @@
 .navbar {
-  display: flex;
+  // display: flex;
   justify-content: space-between;
   align-items: center;
-  background-color: #222;
+  background-color: $color1;
   padding: 1rem;
   height: 60px;
   width: 100%;
-  color: white;
+  color: $color3;
   font-weight: bold;
   font-size: 1.2rem;
 }
@@ -19,12 +19,12 @@
 }
 
 .nav-item {
-  margin-right: 1rem;
+  // margin-right: 1rem;
   position: relative;
 }
 
 .nav-item a {
-  display: flex;
+  // display: flex;
   align-items: center;
   padding: 1rem;
   text-decoration: none;
@@ -32,11 +32,22 @@
 }
 
 .nav-item a:hover {
-  background-color: #444;
+  background-color: $color2;
 }
 
 .active {
-  background-color: #444;
+  background-color: $color1;
+}
+
+input[type="text"] {
+  flex: 1;
+  margin: 0 1rem;
+  padding: 0.5rem;
+  border: none;
+  border-radius: 5px;
+  background-color: $color4;
+  color: black;
+  font-size: 1.2rem;
 }
 
 .dropdown {
@@ -47,14 +58,14 @@
 .dropdown-menu {
   position: absolute;
   top: 100%;
-  left: 0;
+  right: 0;
   z-index: 1;
   min-width: 160px;
   padding: 0;
   margin: 0;
   list-style-type: none;
   background-color: $color1;
-  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  box-shadow: 0px 8px 16px 0px $color1;
   border-radius: 5px;
 }
 
