added lightmode/darkmode needs color palet fixing

--- a/client/styles/variables/_variables.scss
+++ b/client/styles/variables/_variables.scss
@@ -6,4 +6,14 @@ $color3: #edf6f9;
 $color4: #ffddd2;
 $color5: #e29578;
 
+// darkmode colors
+
+$color6: #BB86FC;
+$color7: #3700B3;
+$color8: #03DAC6;
+$color9: #121212;
+$color10: #FFFFFF;
+
+
+
 $mainFont: 'Poppins';
