--- a/client/styles/pages/_home.scss
+++ b/client/styles/pages/_home.scss
@@ -8,6 +8,12 @@
   justify-content: space-between;
   padding: 20px;
   gap: 30px;
+
+  // Dark mode styles
+  &.dark-mode {
+    background-color: $color9;
+    color: $color6;
+  }
 }
 
 // .homeHeader {
@@ -32,6 +38,11 @@
   border: 5px $color5 solid;
   padding: 20px;
   gap: 20px;
+
+  // Dark mode styles
+  &.dark-mode {
+    background-color: $color6;
+  }
 }
 
 // .overlay {
