--- a/client/styles/components/_navbar.scss
+++ b/client/styles/components/_navbar.scss
@@ -1,6 +1,6 @@
 .navbar {
-  // display: flex;
-  justify-content: space-between;
+  display: flex;
+  justify-content: center;
   align-items: center;
   background-color: $color1;
   padding: 1rem;
@@ -19,12 +19,12 @@
 }
 
 .nav-item {
-  // margin-right: 1rem;
+  margin-right: 1rem;
   position: relative;
 }
 
 .nav-item a {
-  // display: flex;
+  display: flex;
   align-items: center;
   padding: 1rem;
   text-decoration: none;
@@ -58,7 +58,7 @@ input[type="text"] {
 .dropdown-menu {
   position: absolute;
   top: 100%;
-  right: 0;
+  left: 0;
   z-index: 1;
   min-width: 160px;
   padding: 0;
