--- a/client/styles/main.scss
+++ b/client/styles/main.scss
@@ -10,4 +10,5 @@
 @import 'components/columns';
 @import 'components/modals';
 @import 'components/navbar';
-
+@import 'components/Board';
+@import 'components/BoardList'
