UI updates for home page and board

--- a/client/styles/components/Board.scss
+++ b/client/styles/components/Board.scss
@@ -9,6 +9,8 @@
 #column-container {
   display: flex;
   margin-top: 20px;
+
+ 
 }
 
 #board-name {
@@ -34,4 +36,9 @@
 #add-column:hover {
   cursor: pointer;
   background-color: $color5;
+}
+
+
+#board-container {
+  
 }
