--- a/client/styles/components/_navbar.scss
+++ b/client/styles/components/_navbar.scss
@@ -22,20 +22,21 @@
 }
 
 .dropdown {
-  position: relative;
-  display: inline-block;
+
+  cursor: pointer;
+
 }
 
 .dropdown-menu {
+  display: flex;
+  justify-content: center;;
   position: absolute;
-  top: 100%;
-  left: 0;
+  top: 45px;
   z-index: 1;
-  min-width: 160px;
-  padding: 0;
-  margin: 0;
+  min-width: 140px;
+  padding: 10px 0;
   list-style-type: none;
-  background-color: $color1;
-  box-shadow: 0px 8px 16px 0px $color1;
+  background-color: $color3;
+  box-shadow: 0px 8px 16px 0px $color3;
   border-radius: 5px;
 }
